--- a/Project_0/MainWindow.xaml
+++ b/Project_0/MainWindow.xaml
@@ -5,22 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Project_0"
         mc:Ignorable="d"
-        ResizeMode="NoResize"
-        Title="MainWindow" Height="436.504" Width="433.193">
+        ResizeMode="CanResize"
+        Title="Credit calculator" Height="436.504" Width="433.193">
     <Grid>
-        <TextBox x:Name="loanPrecentField" VerticalContentAlignment="Center" HorizontalAlignment="Left" HorizontalContentAlignment="Center" Height="30" Margin="10,117,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="139" FontSize="14"/>
+        <TextBox x:Name="loanPrecentField" VerticalContentAlignment="Center" HorizontalAlignment="Left" HorizontalContentAlignment="Center" Height="30" Margin="10,117,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="154" FontSize="14"/>
+
         <Label Content="Исходные данные" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBox x:Name="loanPeriodField" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="30" Margin="10,175,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="139" FontSize="14"/>
-        <TextBox x:Name="clientPayField" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="30" Margin="10,255,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="139" />
-        <TextBox x:Name="clientPayPrecentField" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="31" Margin="10,318,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="139"/>
-        <TextBox x:Name="loanSizeField" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="30" Margin="10,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="139"  FontSize="14"/>
-        <Label Content="Размер кредита (рубли)" HorizontalAlignment="Left" Margin="10,31,0,0" VerticalAlignment="Top" FontSize="14"/>
-        <Label Content="Проценты по кредиту" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top" Height="27" Width="159" FontSize="14"/>
-        <Label Content="Срок кредита(месяцы)" HorizontalAlignment="Left" Margin="10,146,0,0" VerticalAlignment="Top" FontSize="14"/>
-        <TextBox x:Name="outputBox" HorizontalAlignment="Left" Margin="169,10,0,11" TextWrapping="Wrap" Width="248"/>
+        <TextBox x:Name="loanPeriodField" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="30" Margin="10,175,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="154" FontSize="14"/>
+        <TextBox x:Name="clientPayField" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="30" Margin="10,255,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="154" />
+        <TextBox x:Name="clientPayPrecentField" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="31" Margin="10,318,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="154"/>
+        <TextBox x:Name="loanSizeField" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="30" Margin="10,60,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="154"  FontSize="14"/>
+        <Label Content="Размер кредита (рубли)" HorizontalAlignment="Left" Margin="0,31,0,0" VerticalAlignment="Top" FontSize="14" Width="169"/>
+        <Label Content="Проценты по кредиту" HorizontalAlignment="Left" Margin="0,90,0,0" VerticalAlignment="Top" Height="27" Width="159" FontSize="14"/>
+        <Label Content="Срок кредита(месяцы)" HorizontalAlignment="Left" Margin="0,146,0,0" VerticalAlignment="Top" FontSize="14"/>
+        <TextBox TextAlignment="Center" x:Name="outputBox" Margin="174,10,5,11" TextWrapping="Wrap" FontSize="15"/>
         <Button Content="Calculate" HorizontalAlignment="Left" Margin="10,361,0,11" Width="139" Click="Button_Click_1" FontSize="18"/>
-        <Label Content="Стоимость оформления &#xA;кредита(рубли)" HorizontalAlignment="Left" Margin="10,205,0,0" VerticalAlignment="Top" FontSize="14" Height="50" Width="191"/>
-        <Label Content="От размера кредита(%)" HorizontalAlignment="Left" Margin="10,285,0,0" VerticalAlignment="Top" FontSize="14" Height="33"/>
+        <Label Content="Стоимость оформления &#xA;кредита(рубли)" HorizontalAlignment="Left" Margin="0,205,0,0" VerticalAlignment="Top" FontSize="14" Height="50" Width="169"/>
+        <Label Content="От размера кредита(%)" HorizontalAlignment="Left" Margin="0,285,0,0" VerticalAlignment="Top" FontSize="14" Height="33" Width="169"/>
 
     </Grid>
 </Window>
